<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.farshad.finalproject.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:background="#345">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/download"
        android:id="@+id/mainImageView"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/inflexible_stretch"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/inflexible_button"
        android:textSize="18dp"
        android:onClick="inflexibilityActivity"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/maintain_stretch"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="18dp"

        android:id="@+id/maintainFlexibility_button"
        android:onClick="maintainActivity"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/home_workout"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="18dp"

        android:id="@+id/homeWorkout_button"
        android:onClick="homeWorkoutActivity"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="0dp"
        android:layout_gravity="center">

        <Button
            android:layout_width="95dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:text="@string/decrease_time"
            android:textSize="30dp"
            android:textColor="@android:color/holo_red_light"
            android:id="@+id/decreaseTime_button"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:textSize="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@android:color/holo_red_light"

            android:id="@+id/timerTextView"/>

        <Button
            android:layout_width="95dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:text="@string/increase_time"
            android:textSize="30dp"
            android:textColor="@android:color/holo_red_light"
            android:id="@+id/increaseTime_time"/>



    </LinearLayout>

    <Button
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/results"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="18dp"

        android:id="@+id/enterResults_button"
        android:onClick="goToResultsActivity"/>





</LinearLayout>
