<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.farshad.finalproject.ResultsActivity"
    android:orientation="vertical"
    android:background="#345"
    android:weightSum="1">

    <ImageView
        android:id="@+id/workoutImageView"
        android:layout_gravity="center"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:paddingBottom="15dp" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_height="55dp">

        <TextView
            android:text="@string/lastCount_lable"
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:id="@+id/lastCountLableTextView" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:id="@+id/lastCountTextView" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <TextView
            android:id="@+id/EditEnterCountLableTextView"
            android:text="@string/editEnterCount_lable"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="30dp"
            />

        <EditText
            android:id="@+id/EditCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:textColor="@android:color/white"
            android:textSize="30dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/prevButton_label"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/PreviousExerciseButton"
            android:textSize="20dp"
            android:layout_weight="0.86" />

        <Button
            android:text="@string/nextButton_label"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1.00"
            android:textSize="20dp"
            android:id="@+id/NextExerciseButton" />
    </LinearLayout>


</LinearLayout>

